# embedded-sensors

./: CODEOWNERS  Cargo.toml
.github/workflows/: cargo-vet-pr-comment.yml  cargo-vet.yml  check.yml  nostd.yml
embedded-sensors/: Cargo.toml
embedded-sensors-async/: Cargo.toml
embedded-sensors-async/src/: humidity.rs  sensor.rs  temperature.rs
embedded-sensors/src/: humidity.rs  sensor.rs  temperature.rs
supply-chain/: audits.toml  config.toml
