[package]
authors = ["Kurtis Dinelle <kdinelle@microsoft.com>"]
categories = ["embedded", "no-std", "hardware-support"]
description = "A HAL for various peripheral sensors (async)"
edition = "2021"
rust-version = "1.79"
keywords = ["hal", "sensors"]
license = "MIT"
name = "embedded-sensors-hal-async"
readme = "README.md"
repository = "https://github.com/OpenDevicePartnership/embedded-sensors"
version = "0.4.0"

[features]
defmt = ["dep:defmt", "embedded-sensors-hal/defmt"]

[dependencies]
embedded-sensors-hal = { version = "0.1.0", path = "../embedded-sensors" }
defmt = { package = "defmt", version = "1.0.0", optional = true }
paste = "1.0.15"

[dev-dependencies]
assert_approx_eq = "1.1.0"
tokio = { version = "1.49.0", features = ["macros", "rt"] }
